@@ -1,19 +1,115 @@
-# Java Chatbox
+# JavaFX Message Board
 
-A desktop chat application built with Java Swing featuring a custom UI with animations and sound effects.
+A desktop-based JavaFX message board application featuring an interactive graphical interface, multimedia integration, animated responses, and user-driven interaction.
+
+## Demo Video
+
+🎥 [Watch the Demo on YouTube](https://www.youtube.com/shorts/cuESthr3tY0)
+
+---
+
+## About
+
+This project is a JavaFX desktop application developed to simulate an interactive message board experience. The application combines graphical user interface components, animated GIF responses, image assets, and sound effects to create a more engaging user interaction flow.
+
+Although the repository name includes “java-swing-chatbot,” this project is built using **JavaFX**.
+
+---
 
 ## Features
-- Real-time message board
-- Custom color-coded cells
-- Sound effects on interactions
+
+- JavaFX-based desktop GUI
+- Interactive message board system
 - Animated GIF responses
-- Custom logo and branding
+- Image integration
+- Sound effect support
+- Event-driven user interaction
+- Custom visual design
+- Beginner-friendly Java GUI project
+
+---
 
 ## Tech Stack
-![Java](https://img.shields.io/badge/Java-ED8B00?style=flat&logo=openjdk&logoColor=white)
 
-## 🚀 How to Run
+![Java](https://img.shields.io/badge/Java-ED8B00?style=flat&logo=openjdk&logoColor=white)
+![JavaFX](https://img.shields.io/badge/JavaFX-0E4C92?style=flat&logo=java&logoColor=white)
+![OOP](https://img.shields.io/badge/OOP-Programming-blue?style=flat)
+![GUI](https://img.shields.io/badge/Desktop-GUI-success?style=flat)
+![JavaFX Controls](https://img.shields.io/badge/JavaFX-Controls-orange?style=flat)
+
+---
+
+## Skills Demonstrated
+
+- JavaFX GUI development
+- Event handling and listeners
+- Object-oriented application structure
+- Multimedia handling with images, GIFs, and audio
+- Desktop application development
+- Java compilation and execution with external libraries
+
+---
+
+## How to Run
+
+### 1. Clone the repository
+
 ```bash
-javac MessageBoard.java
-java MessageBoard
+git clone https://github.com/belhaj2004/java-swing-chatbot.git
 ```
+
+### 2. Open the project folder
+
+```bash
+cd java-swing-chatbot
+```
+
+### 3. Install JavaFX
+
+Download JavaFX SDK from:
+
+```text
+https://gluonhq.com/products/javafx/
+```
+
+Recommended version:
+
+```text
+JavaFX 17 LTS
+```
+
+---
+
+### 4. Compile the project
+
+Replace `PATH_TO_JAVAFX_LIB` with your own JavaFX `lib` folder path.
+
+```bash
+javac --module-path "PATH_TO_JAVAFX_LIB" --add-modules javafx.controls MessageBoard.java
+```
+
+---
+
+### 5. Run the application
+
+```bash
+java --module-path "PATH_TO_JAVAFX_LIB" --add-modules javafx.controls MessageBoard
+```
+
+---
+
+
+## Future Improvements
+
+- Package the project as an executable `.jar`
+- Organize multimedia assets into an `assets/` folder
+- Improve interface responsiveness
+- Add additional animations and interactions
+- Add a GIF preview directly inside the README
+- Expand chatbot-style interaction logic
+
+---
+
+## Author
+
+Created by [belhaj2004](https://github.com/belhaj2004)
